broken file name svg to png

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -38,7 +38,7 @@
             <div class="portfolio-grid">
                 <!-- Stock Tool Project -->
                 <div class="portfolio-card fade-in">
-                    <img src="../assets/images/stock-tool-thumbnail.svg" alt="Stock Tracker Tool project thumbnail." class="portfolio-image">
+                    <img src="../assets/images/stocktoolthumb.png" alt="Stock Tracker Tool project thumbnail." class="portfolio-image">
                     <div class="card-content">
                         <h3>Stock Tracker Tool</h3>
                         <p>A web-based application for tracking stock prices and performance in real-time, built with a focus on data visualization and user experience.</p>
@@ -137,4 +137,3 @@
     </script>
 </body>
 </html>
-
