UIUX upgrade with project detail pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,23 +24,23 @@
     <title>About | Dan Mills</title>
     
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
     
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="../index.html" class="logo-link"><img src="../assets/images/logo.png" alt="Dan Mills Logo" class="logo"></a>
+            <a href="/index.html" class="logo-link"><img src="/assets/images/logo.png" alt="Dan Mills Logo" class="logo"></a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="./about.html">About</a></li>
-                    <li><a href="./portfolio.html">Portfolio</a></li>
-                    <li><a href="../blog/blog.html">Blog</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/portfolio.html">Portfolio</a></li>
+                    <li><a href="/blog/blog.html">Blog</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="hamburger-menu">
@@ -54,7 +54,7 @@
     <main>
         <section class="content-section">
             <div class="about-content">
-                <img src="../assets/images/danmillsheadshot.jpg" alt="Dan Mills Headshot" class="headshot">
+                <img src="/assets/images/danmillsheadshot.jpg" alt="Dan Mills Headshot" class="headshot">
                 <div class="about-text">
                     <h1>About Me</h1>
                     <p>I'm a full-stack web developer with a passion for creating intuitive and user-friendly web applications. My journey into web development began after a decade in education, where I saw firsthand the need for better digital tools for teaching and learning.</p>
@@ -68,6 +68,6 @@
     <footer>
         <p>&copy; 2025 Dan Mills | <a href="https://danmills.dev">danmills.dev</a></p>
     </footer>
-    <script src="../assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
