--- a/pages/project-dialogue-tool.html
+++ b/pages/project-dialogue-tool.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Tracker Tool - Dan Mills Portfolio</title>
-    <meta name="description" content="A detailed look at the Stock Tracker Tool project, showcasing data visualization and user experience design.">
+    <title>Dialogue Generation Tool - Dan Mills Portfolio</title>
+    <meta name="description" content="A detailed look at the Dialogue Generation Tool, an AI-powered application for creating multi-speaker audio.">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -36,27 +36,26 @@
 
     <main>
         <section class="content-section project-detail">
-            <h1>Stock Tracker Tool</h1>
-            <img src="/assets/images/stocktoolthumb.png" alt="Stock Tracker Tool project thumbnail." class="project-detail-image">
+            <h1>Dialogue Generation Tool</h1>
+            <img src="/assets/images/dialogue-thumb.png" alt="Dialogue Generation Tool project thumbnail." class="project-detail-image">
             
             <div class="project-meta">
                 <div class="meta-item">
-                    <strong>Role:</strong> Full-Stack Developer & UI/UX Designer
+                    <strong>Role:</strong> Full-Stack Developer
                 </div>
                 <div class="meta-item">
-                    <strong>Technologies:</strong> HTML, CSS, JavaScript, Chart.js, Finnhub API
+                    <strong>Technologies:</strong> HTML, CSS, JavaScript, Gemini API
                 </div>
                 <div class="meta-item">
-                     <a href="https://stocktool.danmills.dev" target="_blank" rel="noopener noreferrer" class="cta-button">View Live Site <i class="fas fa-external-link-alt"></i></a>
+                     <a href="https://dialogue.danmills.dev" target="_blank" rel="noopener noreferrer" class="cta-button">View Live Site <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
 
             <h2>The Challenge</h2>
-            <p>The goal was to create a clean, user-friendly dashboard for monitoring real-time stock prices. Many existing tools were either cluttered with excessive data or locked behind a paywall. The challenge was to present key financial information in a way that was both easy to understand at a glance and visually appealing.</p>
+            <p>Language learners and content creators often need to generate and listen to natural-sounding dialogues. The challenge was to build a tool that could not only create scripts using AI but also convert them into multi-speaker audio with customizable voices, all within a simple, easy-to-use interface.</p>
 
             <h2>My Solution</h2>
-            <p>I developed a single-page application using vanilla JavaScript to fetch data from the Finnhub API. The interface was designed to be minimalist and intuitive, using cards to display information for each stock. For data visualization, I integrated Chart.js to create simple but effective historical price charts, allowing users to quickly assess a stock's performance over time.</p>
-            <p>The application is fully responsive, ensuring a seamless experience on both desktop and mobile devices. The focus was on performance and simplicity, providing users with the essential data they need without overwhelming them.</p>
+            <p>I developed a web-based tool that integrates with the Gemini API for both text and audio generation. The user interface allows users to select topics to auto-generate scripts or write their own. They can then assign different voices to each speaker and generate the audio. The tool is built to be intuitive, guiding the user through the process step-by-step. It's a powerful demonstration of how AI can be leveraged to create practical and creative tools.</p>
             
             <a href="/pages/portfolio.html" class="back-to-blog">&larr; Back to Portfolio</a>
         </section>
@@ -69,3 +68,4 @@
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
+
