--- a/pages/project-matts-world.html
+++ b/pages/project-matts-world.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Tracker Tool - Dan Mills Portfolio</title>
-    <meta name="description" content="A detailed look at the Stock Tracker Tool project, showcasing data visualization and user experience design.">
+    <title>Matt's World - Dan Mills Portfolio</title>
+    <meta name="description" content="A detailed look at 'Matt's World,' a fun, interactive educational website for a young student.">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -36,27 +36,26 @@
 
     <main>
         <section class="content-section project-detail">
-            <h1>Stock Tracker Tool</h1>
-            <img src="/assets/images/stocktoolthumb.png" alt="Stock Tracker Tool project thumbnail." class="project-detail-image">
+            <h1>Matt's World</h1>
+            <img src="/assets/images/mattsworld-thumb.png" alt="Matt's World project thumbnail." class="project-detail-image">
             
             <div class="project-meta">
                 <div class="meta-item">
-                    <strong>Role:</strong> Full-Stack Developer & UI/UX Designer
+                    <strong>Role:</strong> Developer & Designer
                 </div>
                 <div class="meta-item">
-                    <strong>Technologies:</strong> HTML, CSS, JavaScript, Chart.js, Finnhub API
+                    <strong>Technologies:</strong> HTML, CSS, JavaScript
                 </div>
                 <div class="meta-item">
-                     <a href="https://stocktool.danmills.dev" target="_blank" rel="noopener noreferrer" class="cta-button">View Live Site <i class="fas fa-external-link-alt"></i></a>
+                     <a href="https://mattsworld.myteacherdan.com" target="_blank" rel="noopener noreferrer" class="cta-button">View Live Site <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
 
             <h2>The Challenge</h2>
-            <p>The goal was to create a clean, user-friendly dashboard for monitoring real-time stock prices. Many existing tools were either cluttered with excessive data or locked behind a paywall. The challenge was to present key financial information in a way that was both easy to understand at a glance and visually appealing.</p>
+            <p>The goal was to create a simple, engaging, and fun website for a young child to use for learning. The design needed to be colorful and interactive, with a focus on ease of use for a non-technical, young audience.</p>
 
             <h2>My Solution</h2>
-            <p>I developed a single-page application using vanilla JavaScript to fetch data from the Finnhub API. The interface was designed to be minimalist and intuitive, using cards to display information for each stock. For data visualization, I integrated Chart.js to create simple but effective historical price charts, allowing users to quickly assess a stock's performance over time.</p>
-            <p>The application is fully responsive, ensuring a seamless experience on both desktop and mobile devices. The focus was on performance and simplicity, providing users with the essential data they need without overwhelming them.</p>
+            <p>I built a playful, single-page website with a cartoonish island theme. Using simple shapes, bright colors, and animations, I created an environment that encourages exploration. The interactions are straightforward click-based events, perfect for a child. The project was built with vanilla HTML, CSS, and JavaScript, keeping it lightweight, fast, and easy to maintain.</p>
             
             <a href="/pages/portfolio.html" class="back-to-blog">&larr; Back to Portfolio</a>
         </section>
@@ -69,3 +68,4 @@
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
+
