--- a/pages/project-pronunciation-tool.html
+++ b/pages/project-pronunciation-tool.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Tracker Tool - Dan Mills Portfolio</title>
-    <meta name="description" content="A detailed look at the Stock Tracker Tool project, showcasing data visualization and user experience design.">
+    <title>Pronunciation Tool - Dan Mills Portfolio</title>
+    <meta name="description" content="A detailed look at the Pronunciation Tool, an AI-powered utility for language learners.">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -36,27 +36,26 @@
 
     <main>
         <section class="content-section project-detail">
-            <h1>Stock Tracker Tool</h1>
-            <img src="/assets/images/stocktoolthumb.png" alt="Stock Tracker Tool project thumbnail." class="project-detail-image">
+            <h1>Pronunciation Practice Tool</h1>
+            <img src="/assets/images/pronunciation-thumb.png" alt="Pronunciation Tool project thumbnail." class="project-detail-image">
             
             <div class="project-meta">
                 <div class="meta-item">
-                    <strong>Role:</strong> Full-Stack Developer & UI/UX Designer
+                    <strong>Role:</strong> Full-Stack Developer
                 </div>
                 <div class="meta-item">
-                    <strong>Technologies:</strong> HTML, CSS, JavaScript, Chart.js, Finnhub API
+                    <strong>Technologies:</strong> HTML, CSS, JavaScript, Gemini API
                 </div>
                 <div class="meta-item">
-                     <a href="https://stocktool.danmills.dev" target="_blank" rel="noopener noreferrer" class="cta-button">View Live Site <i class="fas fa-external-link-alt"></i></a>
+                     <a href="https://pronunciation.danmills.dev" target="_blank" rel="noopener noreferrer" class="cta-button">View Live Site <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
 
             <h2>The Challenge</h2>
-            <p>The goal was to create a clean, user-friendly dashboard for monitoring real-time stock prices. Many existing tools were either cluttered with excessive data or locked behind a paywall. The challenge was to present key financial information in a way that was both easy to understand at a glance and visually appealing.</p>
+            <p>Practicing pronunciation is a critical but often difficult part of learning a new language. The challenge was to create an interactive tool that could generate practice phrases, listen to a user's pronunciation, and provide a fun, gamified way to improve.</p>
 
             <h2>My Solution</h2>
-            <p>I developed a single-page application using vanilla JavaScript to fetch data from the Finnhub API. The interface was designed to be minimalist and intuitive, using cards to display information for each stock. For data visualization, I integrated Chart.js to create simple but effective historical price charts, allowing users to quickly assess a stock's performance over time.</p>
-            <p>The application is fully responsive, ensuring a seamless experience on both desktop and mobile devices. The focus was on performance and simplicity, providing users with the essential data they need without overwhelming them.</p>
+            <p>This tool leverages the Gemini API to generate an endless supply of practice phrases across various topics and complexities. It uses the browser's built-in speech recognition capabilities to capture the user's audio. While direct feedback on pronunciation accuracy is complex, the tool provides a clear target phrase and allows for repeated practice, which is key to improvement. The interface is clean and focused, encouraging users to practice without distraction.</p>
             
             <a href="/pages/portfolio.html" class="back-to-blog">&larr; Back to Portfolio</a>
         </section>
@@ -69,3 +68,4 @@
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
+
