--- a/pages/project-teacher-dan.html
+++ b/pages/project-teacher-dan.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Tracker Tool - Dan Mills Portfolio</title>
-    <meta name="description" content="A detailed look at the Stock Tracker Tool project, showcasing data visualization and user experience design.">
+    <title>My Teacher Dan - Dan Mills Portfolio</title>
+    <meta name="description" content="A detailed look at the 'My Teacher Dan' project, a professional scheduling and information website for an English teacher.">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -36,27 +36,26 @@
 
     <main>
         <section class="content-section project-detail">
-            <h1>Stock Tracker Tool</h1>
-            <img src="/assets/images/stocktoolthumb.png" alt="Stock Tracker Tool project thumbnail." class="project-detail-image">
+            <h1>My Teacher Dan</h1>
+            <img src="/assets/images/tdanthumb.png" alt="My Teacher Dan project thumbnail." class="project-detail-image">
             
             <div class="project-meta">
                 <div class="meta-item">
                     <strong>Role:</strong> Full-Stack Developer & UI/UX Designer
                 </div>
                 <div class="meta-item">
-                    <strong>Technologies:</strong> HTML, CSS, JavaScript, Chart.js, Finnhub API
+                    <strong>Technologies:</strong> HTML, CSS, JavaScript, Firebase
                 </div>
                 <div class="meta-item">
-                     <a href="https://stocktool.danmills.dev" target="_blank" rel="noopener noreferrer" class="cta-button">View Live Site <i class="fas fa-external-link-alt"></i></a>
+                     <a href="https://myteacherdan.com" target="_blank" rel="noopener noreferrer" class="cta-button">View Live Site <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
 
             <h2>The Challenge</h2>
-            <p>The goal was to create a clean, user-friendly dashboard for monitoring real-time stock prices. Many existing tools were either cluttered with excessive data or locked behind a paywall. The challenge was to present key financial information in a way that was both easy to understand at a glance and visually appealing.</p>
+            <p>An English teacher needed a professional online presence to attract new students and manage scheduling. The site had to be clean, easy to navigate for both parents and students, and provide a simple way to view class information and book appointments.</p>
 
             <h2>My Solution</h2>
-            <p>I developed a single-page application using vanilla JavaScript to fetch data from the Finnhub API. The interface was designed to be minimalist and intuitive, using cards to display information for each stock. For data visualization, I integrated Chart.js to create simple but effective historical price charts, allowing users to quickly assess a stock's performance over time.</p>
-            <p>The application is fully responsive, ensuring a seamless experience on both desktop and mobile devices. The focus was on performance and simplicity, providing users with the essential data they need without overwhelming them.</p>
+            <p>I designed and developed a custom website with a bright, welcoming interface. The site clearly outlines the different classes offered, with dedicated pages for each. To handle scheduling, I integrated a simple, no-cost booking system using Firebase for the backend. This allows the teacher to manage their schedule and for parents to request time slots without any monthly fees. The result is a professional, functional, and cost-effective solution.</p>
             
             <a href="/pages/portfolio.html" class="back-to-blog">&larr; Back to Portfolio</a>
         </section>
@@ -69,3 +68,4 @@
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
+
