--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You - Site Mills</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -14,58 +14,43 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
     <link rel="icon" href="/assets/images/favicon.ico">
-    <link rel="manifest" href="/assets/js/manifest.json">
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
-    <div class="main-container">
-        <header class="header">
-            <nav class="navigation">
-                <a href="../index.html" class="logo"><img src="../assets/images/logo.png" alt="Site Mills Logo"></a>
-                <div class="nav-links">
-                    <a href="../index.html" class="nav-item">Home</a>
-                    <a href="about.html" class="nav-item">About Us</a>
-                    <a href="portfolio.html" class="nav-item">Portfolio</a>
-                    <a href="../blog/blog.html" class="nav-item">Blog</a>
-                    <a href="contact.html" class="btn contact-btn">Contact Us</a>
-                </div>
-            </nav>
-        </header>
+    <header>
+        <nav>
+            <a href="/index.html" class="logo-link"><img src="/assets/images/logo.png" alt="Dan Mills Logo" class="logo"></a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/portfolio.html">Portfolio</a></li>
+                    <li><a href="/blog/blog.html">Blog</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+    </header>
 
-        <section class="contact-section" style="text-align: center;">
+    <main class="main-container">
+        <section class="contact-section" style="text-align: center; padding: 4rem 1rem;">
             <div class="contact-header">
-                <h1 style="font-size: 36px; color: #2c3e50;">Thank You!</h1>
-                <p style="max-width: 600px; margin: 20px auto 40px;">Your project details have been sent successfully. We will review them and get back to you as soon as possible.</p>
-                <a href="../index.html" class="btn hero-btn">Return to Home</a>
+                <h1 style="font-size: 36px; color: #e0e0e0;">Thank You!</h1>
+                <p style="max-width: 600px; margin: 20px auto 40px; color: #a0a0a0;">Your project details have been sent successfully. We will review them and get back to you as soon as possible.</p>
+                <a href="/index.html" class="cta-button">Return to Home</a>
             </div>
         </section>
+    </main>
 
-        <footer class="footer">
-            <div class="footer-content">
-                <div class="contact-info">
-                    <h3>Contact Us</h3>
-                    <p>Email: dan@site-mills.com</p>
-                    <p>Phone: 086 333 1493</p>
-                    <p>Location: Bangkok, Thailand</p>
-                </div>
-                <div class="social-links">
-                    <h3>Follow Us</h3>
-                    <a href="https://github.com/dgkmills" class="social-icon">GitHub</a>
-                </div>
-            </div>
-            <p class="copyright">&copy; 2025 Site Mills. All rights reserved.</p>
-        </footer>
-    </div>
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js').then(registration => {
-                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
-                }, err => {
-                    console.log('ServiceWorker registration failed: ', err);
-                });
-            });
-        }
-    </script>
+    <footer class="footer">
+        <p class="copyright">&copy; 2025 Site Mills. All rights reserved.</p>
+    </footer>
+
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
-
